exercise 1.2/css/styles.css
:root {
  --box-shadow: 1px 14px 20px 4px rgba(113, 111, 114, 0.1);
  --font-color: #2b2b2b;
  --primary-color: #bab9ea;
  --secondary-color: #6967c3;
  --darker-secondary: #726fc6;
  --light-gray: #f4f5f6;
}

* {
  box-sizing: border-box;
}

/* General */

body {
  color: var(--font-color);
  font-family: Roboto, sans-serif;
}

header {
  border-bottom: 2px solid var(--light-gray);
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  /*  on scroll the box shadow is box-shadow: 1px 6px 20px rgba(0, 0, 0, 0.05); */
}

h2 {
  font-size: 28px;
}

h3 {
  font-size: 22px;
  margin-bottom: 50px;
  line-height: 1.5;
}

a {
  text-decoration: none;
}

span {
  border-bottom: 2px solid var(--primary-color);
}

footer {
  margin-top: 100px;
  background-color: var(--light-gray);
  padding: 50px 50px 20px 50px;
  height: 120px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}

ul {
  margin-left: 20px;
  padding: 0px;
  line-height: 1.5;
}

summary {
  font-weight: bold;
  padding: 5px;
}

summary::marker {
  color: var(--secondary-color);
}

/* Outer div */

.outer-div {
  background-color: var(--primary-color);
  height: 100%;
  padding: 25px 0px 25px 0px;
}

.page-content {
  background-color: white;
  margin: 0 auto;
  margin-top: 25px;
  margin-bottom: 25px;
  width: 93%;
  height: 90%;
  border-radius: 15px;
  box-shadow: 1px 3px 25px rgba(0, 0, 0, 0.25);
  box-shadow: 1px 3px 25px rgba(113, 29, 217, 0.4);
}

/* Header section */

.header-logo {
  margin-left: 20px;
}

.page-header__item {
  align-self: center;
}

.menuitem:active {
  color: var(--primary-color);
}
.menuitem {
  color: var(--secondary-color);
  text-decoration: none;
  display: block;
}

.active:hover,
.active:focus {
  cursor: default;
}

.nav-right {
  display: flex;
  padding-right: 20px;
}
.active {
  border-bottom: 2px solid var(--primary-color);
  color: var(--font-color);
}

header p {
  padding: 40px 15px 37px 15px;
  margin: 0px;
  border-bottom: 3px solid white;
  display: block;
  height: 100%;
  transition: all 200ms ease-in-out;
}

header p:hover,
header p:focus {
  background-color: var(--light-gray);
  padding-bottom: 37px;
  border-bottom: 3px solid var(--primary-color);
  cursor: pointer;
}

.page-header {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: space-between;
}

/* Buttons */

.button {
  background-color: var(--secondary-color);
  box-shadow: var(--box-shadow);
  font-family: inherit;
  font-weight: 700;
  border: 2px solid var(--secondary-color);
  padding: 15px;
  border-radius: 5px;
  color: white;
  transition: color 300ms ease-in-out, background-color 300ms ease-in-out,
    border-color 300ms ease-in-out;
}

.button:hover,
.button:focus {
  cursor: pointer;
  background-color: white;
  color: var(--secondary-color);
  border: 2px solid var(--secondary-color);
}

/* Footer section */

.footer-content p {
  margin-left: 5px;
}

.footer-icon {
  height: 28px;
}

.footer-icon:hover,
.footer-icon:focus {
  cursor: pointer;
}

/* Homepage */

.placeholder__portrait {
  width: 250px;
  border-radius: 49%;
  position: absolute;
  top: 70px;
  left: 25px;
}

.profile-decorations {
  position: relative;
  margin-right: 50px;
}

.profile-decoration__circle {
  width: 300px;
  height: 300px;
  box-shadow: var(--box-shadow);
  background: linear-gradient(
    360deg,
    rgb(195, 194, 241) 0%,
    rgb(114, 111, 198) 100%
  );
  border-radius: 50%;
  animation: 9s ease-in-out infinite alternate rotate-circle;
}

@keyframes rotate-circle {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.profile {
  max-width: 700px;
  margin: 100px auto;
  display: flex;
}

/* About Page */

.main-about {
  text-align: center;
  max-width: 90%;
  margin: 0 auto;
  margin-top: 50px;
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
}

.bio {
  max-width: 50%;
  border: 2px solid var(--primary-color);
  border-radius: 10px;
  line-height: 2;
  padding: 30px 30px 40px 30px;
  text-align: center;
  margin: 0 auto;
  margin-bottom: 50px;
}

.bio:hover,
.bio:focus {
  box-shadow: var(--box-shadow);
  border: 2px solid var(--primary-color);
}

.bio p {
  margin-top: 0px;
  margin-bottom: 40px;
}

.bio h1 {
  margin: 0px;
}

.skills {
  text-align: left;
  width: 75%;
  margin: 0 auto;
}

.skills-list_item {
  padding: 10px;
  border-bottom: 2px solid var(--light-gray);
  margin: 0px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.skills-list__content {
  padding-left: 15px;
}

.last {
  border-bottom: none;
}

.projects-title {
  text-decoration: underline;
  margin-bottom: 0px;
}

.skills-list_item:hover,
.skills-list_item:focus {
  background-color: var(--light-gray);
  border-radius: 5px;
  cursor: pointer;
}

/* Portfolio Section (work page) */

.portfolio-title {
  text-align: center;
  padding-top: 25px;
}

.main-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 75px;
  width: 80%;
  margin: 0 auto;
  margin-top: 50px;
}

.main-grid__item {
  background-color: var(--light-gray);
  padding: 25px;
  border: 2px solid var(--primary-color);
  border-radius: 10px;
  transition: all 200ms ease-in-out;
}

.main-grid__item:hover,
.main-grid__item:focus {
  box-shadow: var(--box-shadow);
}

.button-wrapper {
  display: flex;
  flex-direction: column;
}

.main-grid__button {
  margin-bottom: 20px;
}

.screenshot {
  width: 90%;
  margin: 0 auto;
}

.technologies {
  display: flex;
  justify-content: center;
}

.technologies-logo {
  margin: 0px 5px;
}

.bold {
  font-weight: bold;
}

/*Contact Page*/

.contact-title {
  text-align: center;
  margin-top: 50px;
}

.contact-info {
  width: 40%;
  height: 40%;
  margin: 0 auto;
  margin-bottom: 170px;
  margin-top: 50px;
  padding: 50px;
  border: 2px solid var(--primary-color);
  border-radius: 10px;
  transition: all 200ms ease-in-out;
  background-color: var(--light-gray);
}

.contact-info:hover,
.contact-info:focus {
  box-shadow: var(--box-shadow);
}

.contact-info__item {
  color: var(--secondary-color);
  font-weight: 700;
  transition: all 200ms ease-in-out;
}

.contact-info__item:hover,
contact-info__item:focus {
  text-decoration: underline;
}

/* Media Queries */

@media all and (max-width: 500px) {
  .main-grid {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(6, 300px);
  }

  .main-about {
    max-width: 400px;
    text-align: center;
    margin: 0 auto;
  }
}

@media all and (min-width: 501px) and (max-width: 750px) {
  .main-grid {
    grid-template-columns: 1fr 1fr;
  }
}

@media all and (max-width: 750px) {
  h1 {
    font-size: 22px;
    margin-top: 30px;
  }

  h2 {
    font-size: 18px;
  }

  h3 {
    font-size: 18px;
  }

  .header-logo {
    display: none;
  }

  .nav-right {
    width: 100%;
    padding-right: 0px;
    justify-content: space-evenly;
  }

  .main-grid {
    grid-gap: 50px;
  }

  .profile {
    flex-direction: column;
    align-items: center;
  }

  .profile-text {
    text-align: center;
  }

  .profile-text__item {
    margin-bottom: 50px;
  }

  .contact-info {
    flex-direction: column;

    width: 90%;
    margin: 0 auto;
  }
  .main-about {
    flex-direction: column !important;
  }

  .skill-flex {
    max-width: 400px;
    height: 400px;
  }
  .skill-box {
    margin-bottom: 20px;
  }

  .skills h2 {
    margin-top: 50px;
    margin-bottom: 30px;
  }

  .bio {
    margin: 0px;
    padding: 20px;
    border: none;
    border-radius: 0px;
    max-width: 100%;
  }
  .bio p {
    margin-bottom: 40px;
  }

  .main-grid {
    width: 100%;
    height: 100%;
    grid-template-rows: repeat(11, 800px);
  }

  .main-grid__item {
    width: 90%;
    margin: 0 auto;
    border-radius: 0px;
  }

  .profile-decorations {
    margin-right: 0px;
  }

  .profile .profile-decoration__circle {
    margin-right: 0px;
  }

  .placeholder__portrait {
    margin-right: 0px;
  }
}

